# DL-Scripts

./: Common-Functions.psm1  Common.psm1  Pattern-Downloader.psm1  Playlist-Downloader.psm1  README.md  download_pattern.py  download_playlist.py  download_utils.py  pyproject.toml  setup.py
apps/: pattern_downloader.py  playlist_downloader.py
playlist_dler/: playlist_dler.py  playlist_lder.py  segment_dler.py  video_muxer.py
tests/: test_general.py  test_weblinks.py
utils/: download.py  download.test.py  download_test.py  general.py  playlist.py  weblinks.py  weblinks_test.py
