[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "dl-scripts"
version = "0.1"
dependencies = ["requests"]

[tool.setuptools]
packages = ["apps", "utils"]

[project.scripts]
playlist_downloader = "apps.playlist_downloader:main"
pattern_downloader = "apps.pattern_downloader:main"
